Final commit before merge

--- a/pages/edit/index.html
+++ b/pages/edit/index.html
@@ -39,10 +39,10 @@
                 </div>
               </div>
               <div class="teacherList list">
-                <div class="teacherEntry">
-                  <div class="teacherMain">
-                    <span class="teacherMainText teacherText">Teacher Name</span>
-                    <div class="removeTeacher"></div>
+                <div class="teacherEntry entry">
+                  <div class="teacherMain entryMain">
+                    <span class="teacherMainText teacherText entryMainText">Teacher Name</span>
+                    <div class="removeTeacher removeButton"></div>
                     <div class="dropdown">
                       <div class="dropdownIcon">
                       </div>
@@ -119,6 +119,18 @@
                 <input class="courseInput input" type="text" placeholder="SEARCH..."/>
               </div>
               <div class="courseList list">
+
+                <div class="courseEntry entry">
+                  <div class="courseMain entryMain">
+                    <span class="courseMainText courseText entryMainText">Course Name</span>
+                    <div class="removeTeacher removeButton"></div>
+                    <div class="dropdown">
+                      <div class="dropdownIcon">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
