finished the layout of classrooms, next step is to add logic for populating lists

--- a/pages/edit/index.html
+++ b/pages/edit/index.html
@@ -266,7 +266,7 @@
                 <div class="classroomEntry entry">
                   <div class="classroomMain entryMain">
                     <span class="classroomMainText classroomText entryMainText"
-                      >Teacher Name</span
+                      >Room 121</span
                     >
                     <div class="dropdown classroomDropdown">
                       <div class="dropdownIcon"></div>
@@ -277,12 +277,12 @@
                       <span class="classroomPeriodText2 classroomText"
                         >Periods Available:</span
                       >
-                      <div class="openPeriods">
+                      <div class="classroomOpenPeriods">
                         <div class="classroomCheckbox">
                           <span class="classroomPeriodText classroomText">1</span>
                           <div class="classroomPeriodCheckboxContainer">
                             <input
-                              class="classroomPeriodCheckbox"
+                              class="classroomInputCheckbox"
                               type="checkbox"
                             />
                           </div>
@@ -291,7 +291,7 @@
                           <span class="classroomPeriodText classroomText">1</span>
                           <div class="classroomPeriodCheckboxContainer">
                             <input
-                              class="classroomPeriodCheckbox"
+                              class="classroomInputCheckbox"
                               type="checkbox"
                             />
                           </div>
