--- a/pages/edit/index.html
+++ b/pages/edit/index.html
@@ -36,6 +36,114 @@
           <div class="teacherColumn column">
             <div class="teacherLabel label">
               <span class="teacherLabelText labelText">TEACHERS</span>
+              <div class="teacherDownload downloadDiv">
+                <div class="downloadIcon"></div>
+              </div>
+            </div>
+            <div class="teacherWrapper wrapper">
+              <div class="teacherSearch search">
+                <div class="searchImage"></div>
+                <input
+                  class="teacherInput input"
+                  type="text"
+                  placeholder="SEARCH..."
+                />
+                <div class="addTeacher">
+                  <span class="addTeacherText">+</span>
+                </div>
+              </div>
+              <div class="teacherList list">
+                <div class="teacherEntry entry">
+                  <div class="teacherMain entryMain">
+                    <span class="teacherMainText teacherText entryMainText"
+                      >Teacher Name</span
+                    >
+                    <div class="removeTeacher removeButton"></div>
+                    <div class="dropdown">
+                      <div class="dropdownIcon"></div>
+                    </div>
+                  </div>
+                  <div class="teacherSubList">
+                    <div class="teacherName">
+                      <input
+                        class="teacherNameText teacherText"
+                        type="text"
+                        value="Teacher Name"
+                        placeholder="Teacher Name (Last, First)"
+                      />
+                    </div>
+                    <div class="teacherCourses">
+                      <div class="teacherCourseBar">
+                        <span class="teacherCourseText teacherText">Courses Taught:</span>
+                        <div class="addTeacherCourse">
+                          <span class="addTeacherCourseText buttonText">+</span>
+                        </div>
+                      </div>
+                      <div class="teacherCourseEntry">
+                        <div class="teacherCourseDropdown">
+                          <div class="teacherCourseDropdown2">
+                            <span
+                              class="teacherCourseDropdownText"
+                              textContent="Co"
+                              >Course</span
+                            >
+                          </div>
+                          <div class="teacherCourseDropdownIcon2">
+                            <div class="teacherCourseDropdownIconImage2"></div>
+                          </div>
+                        </div>
+                        <div class="teacherCourseCounter">
+                          <div class="minusButton">
+                            <span class="minusButtonText buttonText">-</span>
+                          </div>
+                          <div class="teacherSectionCount">
+                            <span class="teacherSectionCountText teacherText"
+                              >0</span
+                            >
+                          </div>
+                          <div class="plusButton">
+                            <span class="plusButtonText buttonText">+</span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="teacherPeriods">
+                      <span class="teacherPeriodText2 teacherText"
+                        >Periods Available:</span
+                      >
+                      <div class="openPeriods">
+                        <div class="teacherCheckbox">
+                          <span class="teacherPeriodText teacherText">1</span>
+                          <div class="teacherPeriodCheckboxContainer">
+                            <input
+                              class="teacherPeriodCheckbox"
+                              type="checkbox"
+                            />
+                          </div>
+                        </div>
+                        <div class="teacherCheckbox">
+                          <span class="teacherPeriodText teacherText">1</span>
+                          <div class="teacherPeriodCheckboxContainer">
+                            <input
+                              class="teacherPeriodCheckbox"
+                              type="checkbox"
+                            />
+                          </div>
+                        </div>
+                        <div class="teacherCheckbox">
+                          <span class="teacherPeriodText teacherText">1</span>
+                          <div class="teacherPeriodCheckboxContainer">
+                            <input
+                              class="teacherPeriodCheckbox"
+                              type="checkbox"
+                            />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="teacherWrapper wrapper">
               <div class="teacherSearch search">
@@ -146,6 +254,9 @@
           <div class="courseColumn column">
             <div class="courseLabel label">
               <span class="courseLabelText labelText">COURSES</span>
+              <div class="courseDownload downloadDiv">
+                <div class="downloadIcon"></div>
+              </div>
             </div>
             <div class="courseWrapper wrapper">
               <div class="courseSearch search">
@@ -253,6 +364,9 @@
           <div class="classroomColumn column">
             <div class="classroomLabel label">
               <span class="classroomLabelText labelText">CLASSROOMS</span>
+              <div class="classroomDownload downloadDiv">
+                <div class="downloadIcon"></div>
+              </div>
             </div>
             <div class="classroomWrapper wrapper">
               <div class="classroomSearch search">
