started the webpage for preferences

--- a/pages/preferences/index.html
+++ b/pages/preferences/index.html
@@ -23,6 +23,48 @@
             </div>
           </div>
         </div>
+        <div class="contentBox">
+          <div class="editColumns">
+            <div class="teacherColumn column">
+              <div class="teacherLabel label">
+                <span class="teacherLabelText labelText">TEACHERS</span>
+              </div>
+              <div class="teacherWrapper wrapper">
+                <div class="teacherSearch search">
+                  <div class="searchImage"></div>
+                  <input
+                    class="teacherInput input"
+                    type="text"
+                    placeholder="SEARCH..."
+                  />
+                  <div class="addTeacher">
+                    <span class="addTeacherText">+</span>
+                  </div>
+                </div>
+                <div class="teacherList list">
+                  <div class="teacherEntry entry">
+                    <div class="teacherMain entryMain">
+                      <span class="teacherMainText teacherText entryMainText">
+                        Teacher Preferences List
+                      </span>
+                      <div class="removeTeacher removeButton"></div>
+                    </div>
+                    <!-- Removed the dropdown div -->
+                    <div class="teacherName">
+                      <!-- ...existing code... -->
+                    </div>
+                    <div class="teacherCourses">
+                      <!-- ...existing code... -->
+                    </div>
+                    <div class="teacherPeriods">
+                      <!-- ...existing code... -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
