testing new layouts

--- a/pages/edit/index.html
+++ b/pages/edit/index.html
@@ -9,7 +9,9 @@
   <body>
     <script src="script.js"></script>
     <div class="dropdownFrame"></div>
+    
     <div class="topFrame">
+      
       <div class="mainFrame">
         <div class="navbar">
           <div class="navbar-flex">
@@ -33,116 +35,12 @@
           </div>
         </div>
         <div class="editColumns">
+          <div class="mouseOverlay"></div>
           <div class="teacherColumn column">
             <div class="teacherLabel label">
               <span class="teacherLabelText labelText">TEACHERS</span>
               <div class="teacherDownload downloadDiv">
                 <div class="downloadIcon"></div>
-              </div>
-            </div>
-            <div class="teacherWrapper wrapper">
-              <div class="teacherSearch search">
-                <div class="searchImage"></div>
-                <input
-                  class="teacherInput input"
-                  type="text"
-                  placeholder="SEARCH..."
-                />
-                <div class="addTeacher">
-                  <span class="addTeacherText">+</span>
-                </div>
-              </div>
-              <div class="teacherList list">
-                <div class="teacherEntry entry">
-                  <div class="teacherMain entryMain">
-                    <span class="teacherMainText teacherText entryMainText"
-                      >Teacher Name</span
-                    >
-                    <div class="removeTeacher removeButton"></div>
-                    <div class="dropdown">
-                      <div class="dropdownIcon"></div>
-                    </div>
-                  </div>
-                  <div class="teacherSubList">
-                    <div class="teacherName">
-                      <input
-                        class="teacherNameText teacherText"
-                        type="text"
-                        value="Teacher Name"
-                        placeholder="Teacher Name (Last, First)"
-                      />
-                    </div>
-                    <div class="teacherCourses">
-                      <div class="teacherCourseBar">
-                        <span class="teacherCourseText teacherText">Courses Taught:</span>
-                        <div class="addTeacherCourse">
-                          <span class="addTeacherCourseText buttonText">+</span>
-                        </div>
-                      </div>
-                      <div class="teacherCourseEntry">
-                        <div class="teacherCourseDropdown">
-                          <div class="teacherCourseDropdown2">
-                            <span
-                              class="teacherCourseDropdownText"
-                              textContent="Co"
-                              >Course</span
-                            >
-                          </div>
-                          <div class="teacherCourseDropdownIcon2">
-                            <div class="teacherCourseDropdownIconImage2"></div>
-                          </div>
-                        </div>
-                        <div class="teacherCourseCounter">
-                          <div class="minusButton">
-                            <span class="minusButtonText buttonText">-</span>
-                          </div>
-                          <div class="teacherSectionCount">
-                            <span class="teacherSectionCountText teacherText"
-                              >0</span
-                            >
-                          </div>
-                          <div class="plusButton">
-                            <span class="plusButtonText buttonText">+</span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="teacherPeriods">
-                      <span class="teacherPeriodText2 teacherText"
-                        >Periods Available:</span
-                      >
-                      <div class="openPeriods">
-                        <div class="teacherCheckbox">
-                          <span class="teacherPeriodText teacherText">1</span>
-                          <div class="teacherPeriodCheckboxContainer">
-                            <input
-                              class="teacherPeriodCheckbox"
-                              type="checkbox"
-                            />
-                          </div>
-                        </div>
-                        <div class="teacherCheckbox">
-                          <span class="teacherPeriodText teacherText">1</span>
-                          <div class="teacherPeriodCheckboxContainer">
-                            <input
-                              class="teacherPeriodCheckbox"
-                              type="checkbox"
-                            />
-                          </div>
-                        </div>
-                        <div class="teacherCheckbox">
-                          <span class="teacherPeriodText teacherText">1</span>
-                          <div class="teacherPeriodCheckboxContainer">
-                            <input
-                              class="teacherPeriodCheckbox"
-                              type="checkbox"
-                            />
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
             <div class="teacherWrapper wrapper">
