--- a/pages/edit/index.html
+++ b/pages/edit/index.html
@@ -37,7 +37,7 @@
           <div class="teacherColumn column">
             <div class="teacherLabel label">
               <span class="teacherLabelText labelText">TEACHERS</span>
-              <div class="semesterDiv">
+              <div class="semesterDiv teacherSemester">
                 <span class="semesterSwitchText">SEM. 1</span>
               </div>
               <div class="teacherUpload uploadDiv">
@@ -159,7 +159,7 @@
           <div class="courseColumn column">
             <div class="courseLabel label">
               <span class="courseLabelText labelText">COURSES</span>
-              <div class="semesterDiv">
+              <div class="semesterDiv courseSemester">
                 <span class="semesterSwitchText">SEM. 1</span>
               </div>
               <div class="courseUpload uploadDiv">
@@ -295,7 +295,7 @@
           <div class="classroomColumn column">
             <div class="classroomLabel label">
               <span class="classroomLabelText labelText">CLASSROOMS</span>
-              <div class="semesterDiv">
+              <div class="semesterDiv classroomSemester">
                 <span class="semesterSwitchText">SEM. 1</span>
               </div>
               <div class="classroomUpload uploadDiv">
