--- a/public/login.html
+++ b/public/login.html
@@ -16,25 +16,31 @@
 
     <script>
         function handleCredentialResponse(response) {
-    console.log("Google token received:", response.credential); // 
-        method: "POST",
-        headers: {
-            "Content-Type": "application/json"
-        },
-        body: JSON.stringify({ token: response.credential })
-    })
-    .then(res => res.json())
-    .then(data => {
-        console.log("Server response:", data); // 
-        if (data.success) {
-            window.location.href = data.redirectUrl; // Redirect to /view
-        } else {
-            console.error("Authentication failed", data.error);
+            console.log("Google token received:", response.credential);
+            fetch("/auth", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({ token: response.credential })
+            })
+            .then(res => {
+                console.log("Raw response:", res);
+                if (!res.ok) {
+                    return res.text().then(text => { throw new Error(text); });
+                }
+                return res.json();
+            })
+            .then(data => {
+                console.log("Server response:", data);
+                if (data.success) {
+                    window.location.href = data.redirectUrl; // Redirect to /index.html
+                } else {
+                    console.error("Authentication failed", data.error);
+                }
+            })
+            .catch(err => console.error("Login error:", err));
         }
-    })
-    .catch(err => console.error("Login error:", err));
-}
-
     </script>
 </body>
 </html>
