--- a/pages/edit/index.html
+++ b/pages/edit/index.html
@@ -30,6 +30,7 @@
               <div class="prefButton">
                 <span class="prefButtonText">PREFERENCES</span>
               </div>
+              <div class="helpButton"><span class="helpButtonText">HELP</span></div>
             </div>
           </div>
         </div>
