--- a/pages/edit/index.html
+++ b/pages/edit/index.html
@@ -30,7 +30,9 @@
               <div class="prefButton">
                 <span class="prefButtonText">PREFERENCES</span>
               </div>
-              <div class="helpButton"><span class="helpButtonText">HELP</span></div>
+              <a href="https://docs.google.com/document/d/1Ae7sqD_2L2xarAsSQ0ftZyyVm4Ge9RiRcWy7g3bLtmM/edit?tab=t.0" class="help-"target="_blank" rel="noopener noreferrer">
+              <div class="helpButton"><span class="helpButtonText">HELP</span>
+              </div>
             </div>
           </div>
         </div>
