--- a/pages/preferences/index.html
+++ b/pages/preferences/index.html
@@ -20,7 +20,10 @@
               <div class="viewButton"><span class="viewButtonText">VIEW</span></div>
               <div class="editButton"><span class="editButtonText">EDIT</span></div>
               <div class="prefButton"><span class="prefButtonText">PREFERENCES</span></div>
-              <div class="helpButton"><span class="helpButtonText">HELP</span></div>
+              <div class="helpButton">
+                <span class="helpButtonText"><a href="https://docs.google.com/document/d/1Ae7sqD_2L2xarAsSQ0ftZyyVm4Ge9RiRcWy7g3bLtmM/edit?tab=t.0" class="help-"target="_blank" rel="noopener noreferrer">HELP</a>
+                </span>
+              </div>            
             </div>
           </div>
         </div>
