I worked on the step by step guide today

--- a/pages/edit/index.html
+++ b/pages/edit/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!--<link href="font/Inter.txt" rel="stylesheet"/>-->
+    <!--<link href="font/Inter.txt" rel="stylesheett"/>-->
     <link href="styles.css" rel="stylesheet" />
 
     <title>Course Scheduler</title>
