added a new function to populate with the teachers

--- a/pages/preferences/index.html
+++ b/pages/preferences/index.html
@@ -41,7 +41,7 @@
                     <span class="addTeacherText">+</span>
                   </div>
                 </div>
-                <div class="teacherList list">
+                <div class="teacherList list" id="teacherList>
                   <div class="teacherEntry entry">
                     <div class="teacherMain entryMain">
                       <span class="teacherMainText teacherText entryMainText">
@@ -50,14 +50,12 @@
                       <div class="removeTeacher removeButton"></div>
                     </div>
                     <!-- Removed the dropdown div -->
-                    <div class="teacherName">
+                    <div class="teacherLunch">
                       <!-- ...existing code... -->
                     </div>
-                    <div class="teacherCourses">
+                    <div class="teacher Planning period">
                       <!-- ...existing code... -->
                     </div>
-                    <div class="teacherPeriods">
-                      <!-- ...existing code... -->
                     </div>
                   </div>
                 </div>
