--- a/pages/edit/index.html
+++ b/pages/edit/index.html
@@ -32,8 +32,7 @@
               </div>
               
               <div class="helpButton">
-                <span class="helpButtonText"><a href="https://docs.google.com/document/d/1Ae7sqD_2L2xarAsSQ0ftZyyVm4Ge9RiRcWy7g3bLtmM/edit?tab=t.0" class="help-"target="_blank" rel="noopener noreferrer">HELP</a>
-                </span>
+                <span class="prefButtonText">HELP</span>
               </div>
             </div>
           </div>
