--- a/pages/help/index.html
+++ b/pages/help/index.html
@@ -32,7 +32,7 @@
               </div>
               
               <div class="helpButton">
-                <span class="prefButtonText">HELP</span>
+                <span class="helpButtonText">HELP</span>
               </div>
             </div>
           </div>
