--- a/pages/help/index.html
+++ b/pages/help/index.html
@@ -37,8 +37,69 @@
             </div>
           </div>
         </div>
+
+        <div class="helpContent scrollable">
+          <div class="helpSection">
+            <h2 class="helpTitle">User Guide</h2>
+            <p class="helpText">This guide will walk you through the features of the Course Scheduler.</p>
+          </div>
+          <!-- Other sections -->
+
+          <div class="helpSection">
+            <h3 class="helpSubtitle">1. Dashboard</h3>
+            <p class="helpText">The dashboard includes:</p>
+            <ul class="helpList">
+              <li>A calendar or list view displaying current and upcoming events.</li>
+              <li>A navigation bar with the different pages: Edit, View, and Preferences.</li>
+              <li>
+                <strong>View:</strong> Shows the generated schedule and download options.
+              </li>
+              <li>
+                <strong>Edit:</strong> Change teachers, courses, and classrooms.
+              </li>
+            </ul>
+            <div class="helpImagePlaceholder">[Add dashboard image here]</div>
+          </div>
+
+          <div class="helpSection">
+            <h3 class="helpSubtitle">2. View Page</h3>
+            <p class="helpText">The view page allows you to:</p>
+            <ul class="helpList">
+              <li>Download data as JSON or CSV.</li>
+              <li>Generate a schedule based on the data from the edit page.</li>
+            </ul>
+            <div class="helpImagePlaceholder">[Add view page image here]</div>
+          </div>
+
+          <div class="helpSection">
+            <h3 class="helpSubtitle">3. Edit Page</h3>
+            <p class="helpText">The edit page includes three columns:</p>
+            <ul class="helpList">
+              <li><strong>Teachers:</strong> Edit teacher details and courses taught.</li>
+              <li><strong>Courses:</strong> Edit course details, compatible classrooms, and periods.</li>
+              <li><strong>Classrooms:</strong> Edit classroom availability.</li>
+            </ul>
+            <div class="helpImagePlaceholder">[Add edit page image here]</div>
+          </div>
+
+          <div class="helpSection">
+            <h3 class="helpSubtitle">4. Edit Page-View Page Interaction</h3>
+            <p class="helpText">
+              Changes made in the edit page do not immediately reflect on the view page. Follow these steps to update the view page:
+            </p>
+            <ol class="helpList">
+              <li>Make changes in the edit page.</li>
+              <li>Download the updated data.</li>
+              <li>Upload the data to the view page.</li>
+            </ol>
+            <div class="helpImagePlaceholder">[Add interaction image here]</div>
+          </div>
+        </div>
+
       </div>
     </div>
     
+
+
   </body>
 </html>
